--- a/.github/workflows/quality_check.yml
+++ b/.github/workflows/quality_check.yml
@@ -1,15 +1,14 @@
-name: Build iOS App
+name: Code Quality Check
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main ]
-  workflow_dispatch:
+    branches: [ main, develop ]
 
 jobs:
-  build-ios:
-    runs-on: macos-14
+  quality-check:
+    runs-on: ubuntu-latest
     
     steps:
     - name: Checkout repository
@@ -27,24 +26,20 @@ jobs:
     - name: Generate code
       run: flutter packages pub run build_runner build --delete-conflicting-outputs
       
-    - name: Analyze code
+    - name: Verify formatting
+      run: dart format --output=none --set-exit-if-changed .
+      
+    - name: Analyze project source
       run: flutter analyze --no-fatal-infos
       
     - name: Run tests
-      run: flutter test
+      run: flutter test --coverage
       
-    - name: Build iOS (unsigned)
-      run: flutter build ios --no-codesign --release --no-tree-shake-icons
+    - name: Check pub deps
+      run: flutter pub deps
       
-    - name: Create IPA
-      run: |
-        mkdir -p Payload
-        cp -r build/ios/iphoneos/Runner.app Payload/
-        zip -r TasteSmoke-iOS.ipa Payload/
-        
-    - name: Upload IPA artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
       with:
-        name: TasteSmoke-iOS
-        path: TasteSmoke-iOS.ipa
-        retention-days: 30
+        files: ./coverage/lcov.info
+        fail_ci_if_error: false
